--- a/src/components/Header_Footer/Header_Footer.css
+++ b/src/components/Header_Footer/Header_Footer.css
@@ -1,6 +1,5 @@
-
-
-img {
+.header_footer {
+    overflow-x: hidden;
     max-width: 100vw;
 }
 
@@ -9,9 +8,44 @@ img {
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    max-height: 9vh;
+}
+
+.img_logo{
+    margin: 3vh;
+}
+
+.img_modo {
+    max-height: 4vh;
+    border-radius: 50px;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 0 3vh;
+}
+
+.rodape {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
-.topo > img, button {
-    max-height: 1vh;
+.img_logo_rodape {
+    width: auto;
+    max-height: 9vh;
+}
+
+.tecnologias_img {
+    display: flex;
+    flex-direction: row;
+}
+
+.tecnologias_img > img {
+    max-width: 10vw;
+    margin: 4vw 4vw 8vw 4vw;
+}
+
+.name_desenvolvedor {
+    color: rgb(231, 199, 13);
 }
