--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,13 +2,25 @@
     display: flex;
     justify-content: left;
     flex-direction: column;
+    padding: 4vh 0;
+    border: 1px solid rgba(0, 0, 0, 0.027);
+    
 }
 
 .data {
     text-align: left;
+    margin: 0;
+    padding: 2vw;
 }
 
-.txt_card {
-    align-items: left;
-    text-align: left;
+.data > h2 {
+    margin: 1vh 0;
+}
+
+@media (min-width: 768px) {
+    .card {
+        max-width: 25vw;
+        justify-content: center;
+        align-items: center;
+    }
 }
