--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,15 +2,35 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin: 4vw;
+    max-width: 100vw;
 }
 
 .img_banner {
     display: none;
 }
 
+.destaque {
+    width: 100vw;
+    margin: 0;
+}
+
+.txt_destaque {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    height: 65vh;
+    padding: 0 2vw;
+    background-color: white;
+    color: black;
+}
+
 .destaque_txt {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.experiencias {
+    width: 100vw;
 }
 
 .titulo_card {
@@ -28,6 +48,10 @@
 
 @media (min-width: 768px) {
     
+    .txt_destaque{
+        width: 50vw;
+    }
+
     .destaque {
         display: flex;
         justify-content: center;
